--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,10 @@
 /target
+/.idea/inspectionProfiles/profiles_settings.xml
+/.idea/inspectionProfiles/Project_Default.xml
+/.idea/.gitignore
+/.idea/BAMetrics.iml
+/.idea/dictionaries
+/.idea/misc.xml
+/.idea/modules.xml
+/.idea/ruff.xml
+/.idea/vcs.xml
