--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2021"
 bam="0.1"
 clap="4.4"
 rstest = "0.18"
-serde = "1.0"
+serde =  { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 
 [dev-dependencies]
