--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,8 @@
 [package]
 name = "BAMetrics"
+authors = ["Guy Teichman <guyteichman@gmail.com>"]
+readme = "README.rst"
+homepage = "https://github.com/GuyTeichman/BAMetrics"
 version = "0.1.0"
 edition = "2021"
 
@@ -7,7 +10,7 @@ edition = "2021"
 
 [dependencies]
 bam="0.1"
-clap = "4.4"
+clap = {version = "4.4", features=["cargo"] }
 rstest = "0.18"
 serde =  { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
