--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ edition = "2021"
 
 [dependencies]
 bam="0.1"
-clap = {version = "4.4", features=["cargo"] }
+clap = {version = "4.4", features=["cargo", "derive", "env"] }
 rstest = "0.18"
 serde =  { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
