--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,8 @@ clap = {version = "4.4", features=["cargo", "derive", "env"] }
 rstest = "0.18"
 serde =  { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+strum = "0.25.0"
+strum_macros = "0.25.3"
 
 [dev-dependencies]
 rstest = "0.18"
