--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ serde =  { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 strum = "0.25.0"
 strum_macros = "0.25.3"
+typetag = "0.2.13"
 
 [dev-dependencies]
 rstest = "0.18"
