--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -22,5 +22,15 @@ jobs:
     - uses: actions/checkout@v3
     - name: Build
       run: cargo build --verbose
-    - name: Run tests
-      run: cargo test --verbose
+    - name: Run tests and collect coverage
+      run: |
+          cargo test --verbose
+          cargo install grcov
+          grcov ./target/debug/ -s . -t coveralls --llvm --branch --ignore-not-existing -o ./coverage.json
+    - name: Upload coverage to Coveralls
+      uses: coverallsapp/github-action@master
+      with:
+        github-token: ${{ secrets.GITHUB_TOKEN }}
+        path-to-lcov: ./coverage.json
+        flag-name: run-${{ matrix.rust }}
+        parallel: true
