--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -26,7 +26,7 @@ jobs:
       run: |
           cargo test --verbose
           cargo install grcov
-          grcov ./target/debug/ -s . -t coveralls --llvm --branch --ignore-not-existing -o ./coverage.json
+          grcov ./target/debug/ -s . -t coveralls --llvm --branch --ignore-not-existing -o ./coverage.json --token ${{ secrets.COVERALLS_REPO_TOKEN }}
     - name: Upload coverage to Coveralls
       uses: coverallsapp/github-action@master
       with:
