--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -19,14 +19,21 @@ jobs:
           os: [ ubuntu-latest, windows-latest, macos-latest ]
 
     steps:
+    - name: Checkout repository
     - uses: actions/checkout@v3
+    - name: Set up environment for code coverage
+      run: |
+        echo "CARGO_INCREMENTAL=0" >> $GITHUB_ENV
+        echo "RUSTFLAGS=-Zinstrument-coverage" >> $GITHUB_ENV
+        echo "LLVM_PROFILE_FILE=${{ github.workspace }}/coverage/%p-%m.profraw" >> $GITHUB_ENV
     - name: Build
       run: cargo build --verbose
-    - name: Run tests and collect coverage
+    - name: Run tests
+      run: cargo test --verbose
+    - name: Collecting code coverage
       run: |
-          cargo test --verbose
-          cargo install grcov
-          grcov ./target/debug/ -s . -t coveralls --llvm --branch --ignore-not-existing -o ./coverage.json --token ${{ secrets.COVERALLS_REPO_TOKEN }}
+        cargo install grcov
+        grcov . -s . -t coveralls --llvm --branch --ignore-not-existing --output-path ./coverage.json --token ${{ secrets.COVERALLS_REPO_TOKEN }}
     - name: Upload coverage to Coveralls
       uses: coverallsapp/github-action@master
       with:
