squash! added compile flags to build step

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -20,7 +20,7 @@ jobs:
 
     steps:
     - name: Checkout repository
-    - uses: actions/checkout@v3
+      uses: actions/checkout@v3
     - name: Set up environment for code coverage
       run: |
         echo "CARGO_INCREMENTAL=0" >> $GITHUB_ENV
