--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -30,7 +30,7 @@ jobs:
     - name: Set up environment for code coverage
       run: |
         echo "CARGO_INCREMENTAL=0" >> $GITHUB_ENV
-        echo "RUSTFLAGS=-Zinstrument-coverage" >> $GITHUB_ENV
+        echo "RUSTFLAGS=-C instrument-coverage" >> $GITHUB_ENV
         echo "LLVM_PROFILE_FILE=${{ github.workspace }}/coverage/%p-%m.profraw" >> $GITHUB_ENV
     - name: Build
       run: cargo build --verbose
