--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -39,7 +39,7 @@ jobs:
     - name: Collecting code coverage
       run: |
         cargo install grcov
-        grcov ./target/debug/deps/ -s . -t coveralls --llvm --branch --ignore-not-existing --output-path ./coverage.json --token ${{ secrets.COVERALLS_REPO_TOKEN }}
+        grcov ${GITHUB_WORKSPACE}/coverage/ -b ./target/debug/deps/ -s . -t coveralls --llvm --branch --ignore-not-existing --output-path ./coverage.json --token ${{ secrets.COVERALLS_REPO_TOKEN }}
     - name: Upload coverage to Coveralls
       uses: coverallsapp/github-action@master
       with:
