--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -46,10 +46,10 @@ jobs:
     - name: Print lcov.info for debugging
       run: head -n 100 ./coverage/lcov.info
     - name: Upload coverage to Coveralls
-      uses: coverallsapp/github-action@master
+      uses: coverallsapp/github-action@v2
       with:
         github-token: ${{ secrets.GITHUB_TOKEN }}
-        path-to-lcov: ./coverage/lcov.info
+        file: ./coverage/lcov.info
         flag-name: run-${{ matrix.rust }}
         parallel: true
 
