--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -20,12 +20,12 @@ jobs:
 
     steps:
     - name: Set up coverage path
-      run: echo "COVERAGE_PATH=./coverage/" >> $GITHUB_ENV
+      run: echo "COVERAGE_PATH=./coverage/lcov.info" >> $GITHUB_ENV
       if: runner.os == 'Linux' || runner.os == 'macOS'
 
     - name: Set up coverage path for Windows
       run: |
-        echo "COVERAGE_PATH=D:/coverage/" >> $GITHUB_ENV
+        echo "COVERAGE_PATH=D:/coverage/lcov.info" >> $GITHUB_ENV
         mkdir -p D:/coverage
       if: runner.os == 'Windows'
     - name: Install Rust nightly toolchain
@@ -52,7 +52,7 @@ jobs:
         cargo install grcov
         grcov ${GITHUB_WORKSPACE}/coverage/ -b ./target/debug/deps/ -s . -t lcov --llvm --branch --ignore-not-existing --output-path ${{ env.COVERAGE_PATH }} --token ${{ secrets.COVERALLS_REPO_TOKEN }}
     - name: Print lcov.info for debugging
-      run: head -n 100 ./coverage/lcov.info
+      run: head -n 100 ${{ env.COVERAGE_PATH }}
     - name: Upload coverage to Coveralls
       uses: coverallsapp/github-action@v2
       with:
