--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -51,7 +51,7 @@ jobs:
     - name: Collecting code coverage
       run: |
         cargo install grcov
-        grcov target/coverage/ -b target/debug/ -s . --keep-only 'src/*' -t lcov --llvm --branch --ignore-not-existing --output-path ${{ env.COVERAGE_PATH }} --token ${{ secrets.COVERALLS_REPO_TOKEN }}
+        grcov ${GITHUB_WORKSPACE}/coverage/ -b target/debug/ -s . --keep-only 'src/*' -t lcov --llvm --branch --ignore-not-existing --output-path target/coverage --token ${{ secrets.COVERALLS_REPO_TOKEN }}
     - name: Upload coverage to Coveralls
       uses: coverallsapp/github-action@v2
       with:
