--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -20,12 +20,15 @@ jobs:
 
     steps:
     - name: Set up coverage path
-      run: echo "COVERAGE_PATH=target/coverage/lcov.info" >> $GITHUB_ENV
+      run: |
+        echo "COVERAGE_PATH=target/coverage/lcov.info" >> $GITHUB_ENV
+        mkdir -p target/coverage
       if: runner.os == 'Linux' || runner.os == 'macOS'
 
     - name: Set up coverage path for Windows
       run: |
         echo "COVERAGE_PATH=target/coverage/lcov.info" >> $GITHUB_ENV
+        mkdir -p target/coverage
         echo $COVERAGE_PATH
       if: runner.os == 'Windows'
     - name: Install Rust nightly toolchain
@@ -49,7 +52,6 @@ jobs:
       run: cargo test --verbose
     - name: Collecting code coverage
       run: |
-        mkdir -p ${{ env.COVERAGE_PATH }}
         cargo install grcov
         grcov ${GITHUB_WORKSPACE}/coverage/ -b target/debug/ -s . --keep-only 'src/*' -t lcov --llvm --branch --ignore-not-existing --output-path ${{ env.COVERAGE_PATH }} --token ${{ secrets.COVERALLS_REPO_TOKEN }}
     - name: Upload coverage to Coveralls
