--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -21,14 +21,14 @@ jobs:
     steps:
     - name: Set up coverage path
       run: |
-        echo "COVERAGE_PATH=target/coverage/lcov.info" >> $GITHUB_ENV
-        mkdir -p target/coverage
+        echo "COVERAGE_PATH=${GITHUB_WORKSPACE}/coverage/lcov.info" >> $GITHUB_ENV
+        mkdir -p ${GITHUB_WORKSPACE}/coverage
       if: runner.os == 'Linux' || runner.os == 'macOS'
 
     - name: Set up coverage path for Windows
       run: |
-        echo "COVERAGE_PATH=target/coverage/lcov.info" >> $GITHUB_ENV
-        mkdir -p target/coverage
+        echo "COVERAGE_PATH=${GITHUB_WORKSPACE}/coverage/lcov.info" >> $GITHUB_ENV
+        mkdir -p ${GITHUB_WORKSPACE}/coverage
         echo $COVERAGE_PATH
       if: runner.os == 'Windows'
     - name: Install Rust nightly toolchain
