--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -29,11 +29,10 @@ jobs:
 
     - name: Set up environment variables for Windows
       run: |
-        echo "COVERAGE_PATH=${GITHUB_WORKSPACE}/coverage/lcov.info" >> $env:GITHUB_ENV
+        echo "COVERAGE_PATH=${GITHUB_WORKSPACE}\coverage\lcov.info" >> $env:GITHUB_ENV
         echo "CARGO_INCREMENTAL=0" >> $env:GITHUB_ENV
         echo "RUSTFLAGS=-C instrument-coverage" >> $env:GITHUB_ENV
-        echo "LLVM_PROFILE_FILE=${{ github.workspace }}/coverage/%p-%m.profraw" >> $env:GITHUB_ENV
-        mkdir -p ${GITHUB_WORKSPACE}/coverage
+        echo "LLVM_PROFILE_FILE=${{ github.workspace }}\coverage\%p-%m.profraw" >> $env:GITHUB_ENV
       if: runner.os == 'Windows'
     - name: Install Rust nightly toolchain
       uses: actions-rs/toolchain@v1
